--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="https://ravinsinghd.github.io/opus-website/runtime.js"></script><script type="text/javascript" src="https://ravinsinghd.github.io/opus-website/polyfills.js"></script><script type="text/javascript" src="https://ravinsinghd.github.io/opus-website/styles.js"></script><script type="text/javascript" src="https://ravinsinghd.github.io/opus-website/vendor.js"></script><script type="text/javascript" src="https://ravinsinghd.github.io/opus-website/main.js"></script></body>
 
 </html>
